--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,5 @@
 name: 'pycovcheck'
-description: 'Asserts test coverage thresholds from a python coverage file'
+description: 'Asserts test coverage thresholds from a python coverage xml file'
 inputs:
   packages:
     description: 'set of package:treshold statements, where treshold is a percentage expressed as float'
@@ -13,10 +13,6 @@ inputs:
     description: 'path to the python coverage xml file'
     required: true
     default: './coverage.xml'
-  format:
-    description: 'coverage format, defaults to nose2, the only supported format as for now'
-    required: true
-    default: 'nose2'
 branding:
   icon: 'check-circle'
   color: 'orange'
@@ -24,7 +20,6 @@ runs:
   using: 'docker'
   image: 'Dockerfile'
   args:
-    - format=${{ inputs.format }}
     - coveragefile=${{ inputs.coveragefile }}
     - packages=${{ inputs.packages }}
     - classes=${{ inputs.classes }}
