extended class it with wildcar

--- a/.github/workflows/it-coverage-classes.yml
+++ b/.github/workflows/it-coverage-classes.yml
@@ -11,16 +11,20 @@ jobs:
 
   it-action-coverage-classes:
 
-    name: IT Classes Coverage, Named
+    name: IT Classes Coverage
     runs-on: ubuntu-latest
     steps:
       - name: Checkout sources for fixtures
         uses: actions/checkout@v3
 
-      - name: Assert coverage of a single class 
+      - name: Assert coverage of collections.py is above or equal to 93% 
         uses: zlatko-ms/pycovcheck@main
         with: 
           coveragefile: ./test/fixtures/unit/nose2/coverage1.xml
           classes:  collections.py:0.93
 
-  
+      - name: Assert coverage of all classes is above or equal to 93% 
+        uses: zlatko-ms/pycovcheck@main
+        with: 
+          coveragefile: ./test/fixtures/unit/nose2/coverage1.xml
+          classes:  *:0.93
