--- a/.github/workflows/it-coverage-classes.yml
+++ b/.github/workflows/it-coverage-classes.yml
@@ -27,4 +27,4 @@ jobs:
         uses: zlatko-ms/pycovcheck@main
         with: 
           coveragefile: ./test/fixtures/unit/nose2/coverage1.xml
-          classes:  collections.py:0.9
+          classes: :0.9
