fixed class parenting issue in xml parsing

--- a/.github/workflows/it-coverage-classes.yml
+++ b/.github/workflows/it-coverage-classes.yml
@@ -21,7 +21,7 @@ jobs:
         uses: zlatko-ms/pycovcheck@main
         with: 
           coveragefile: ./test/fixtures/unit/nose2/coverage1.xml
-          classes:  collections.py:0.93
+          classes:  azbaseliner.util.collections.py:0.93
 
       - name: Assert coverage of all classes is above or equal to 80% 
         uses: zlatko-ms/pycovcheck@main
