--- a/.github/workflows/it-coverage-mixed.yml
+++ b/.github/workflows/it-coverage-mixed.yml
@@ -17,15 +17,16 @@ jobs:
       - name: Checkout sources for fixtures
         uses: actions/checkout@v3
 
-      - name: Assert coverage of azbazeliner.pricer package is above 85% and coverage of collections.py is above 90%
+      - name: Assert coverage of azbazeliner.pricer package is above 85% and coverage of azbaseliner.util.collections.py is above 90%
         uses: zlatko-ms/pycovcheck@main
         with: 
           coveragefile: ./test/fixtures/unit/nose2/coverage1.xml
           packages:  azbaseliner.pricing:0.85
-          classes: collections.py:0.90
+          classes: azbaseliner.util.collections.py:0.90
 
-      - name: Assert coverage of all packages is above or equal to 80% 
+      - name: Assert coverage of all packages is above 80% while azbaseliner.util.collections.py is above 90% 
         uses: zlatko-ms/pycovcheck@main
         with: 
           coveragefile: ./test/fixtures/unit/nose2/coverage2.xml
           packages: :0.8
+          classes: azbaseliner.util.collections.py:0.90
