--- a/.github/workflows/it-coverage-packages.yml
+++ b/.github/workflows/it-coverage-packages.yml
@@ -17,14 +17,15 @@ jobs:
       - name: Checkout sources for fixtures
         uses: actions/checkout@v3
 
+      - name: Assert coverage of azbaseliner.util package is above or equal to 90% 
+        uses: zlatko-ms/pycovcheck@main
+        with: 
+          coveragefile: ./test/fixtures/unit/nose2/coverage2.xml
+          packages: azbaseliner.util:0.8
+
       - name: Assert coverage of all packages is above or equal to 80% 
         uses: zlatko-ms/pycovcheck@main
         with: 
           coveragefile: ./test/fixtures/unit/nose2/coverage2.xml
           packages: :0.8
 
-      - name: Assert coverage of all classes is above or equal to 80% 
-        uses: zlatko-ms/pycovcheck@main
-        with: 
-          coveragefile: ./test/fixtures/unit/nose2/coverage2.xml
-          classes: :0.8
